<!-- Portrait orientation only -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#1A1A1A"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PcView">

    <androidx.cardview.widget.CardView
        android:id="@+id/batteryWarningCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settingsButton"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="6dp"
        app:cardCornerRadius="12dp"
        app:cardBackgroundColor="#2D1510"
        app:cardElevation="3dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@android:drawable/ic_dialog_alert"
                app:tint="#F87171"
                android:contentDescription="Battery Alert" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="6dp">

                <TextView
                    android:id="@+id/batteryWarningTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/battery_dialog_title"
                    android:textColor="#FCA5A5"
                    android:textStyle="bold"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/batteryWarningText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/summary_battery_restrictions_banner"
                    android:textColor="#E2E8F0"
                    android:textSize="11sp"
                    android:layout_marginTop="2dp" />
            </LinearLayout>

            <Button
                android:id="@+id/batteryWarningFixButton"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:text="@string/battery_fix_button"
                android:textSize="10sp"
                android:textColor="#FFFFFF"
                app:backgroundTint="#EF4444"
                style="@style/Widget.MaterialComponents.Button" />

            <ImageButton
                android:id="@+id/batteryWarningDismissButton"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                app:tint="#94A3B8"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="Dismiss"
                android:layout_marginStart="4dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/pcFragmentContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/batteryWarningCard"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        >

        <RelativeLayout
            android:id="@+id/no_pc_found_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">
            <ProgressBar
                android:id="@+id/pcs_loading"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:indeterminate="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/pcs_loading"
                android:layout_toEndOf="@+id/pcs_loading"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:text="@string/searching_pc"/>
        </RelativeLayout>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_settings"
        android:preferKeepClear="true"
        style="?android:attr/borderlessButtonStyle"/>

    <ImageButton
        android:id="@+id/helpButton"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/settingsButton"
        android:layout_toEndOf="@+id/settingsButton"
        android:src="@drawable/ic_help"
        android:preferKeepClear="true"
        style="?android:attr/borderlessButtonStyle"/>

    <ImageButton
        android:id="@+id/updateButton"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/helpButton"
        android:layout_toEndOf="@+id/helpButton"
        android:src="@drawable/ic_update"
        android:contentDescription="@string/update_button_desc"
        android:preferKeepClear="true"
        style="?android:attr/borderlessButtonStyle"/>

    <ImageButton
        android:id="@+id/diagnosticsButton"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/updateButton"
        android:layout_toEndOf="@+id/updateButton"
        android:src="@drawable/ic_diagnostics"
        android:contentDescription="@string/title_last_disconnect_log"
        android:preferKeepClear="true"
        style="?android:attr/borderlessButtonStyle"/>

    <ImageButton
        android:id="@+id/manuallyAddPc"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_add"
        android:preferKeepClear="true"
        style="?android:attr/borderlessButtonStyle"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/profilesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/profile_manager_choose_profile"
        android:layout_margin="16dp"
        app:icon="@drawable/ic_profiles" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/dualsenseBridgeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/dualsense_bridge_title"
        android:text="@string/dualsense_bridge_button"
        app:icon="@drawable/ic_qm_controller" />

</RelativeLayout>
